--- a/NHtaskMVC/Views/Devices/Get.cshtml
+++ b/NHtaskMVC/Views/Devices/Get.cshtml
@@ -19,6 +19,14 @@
         <th>ID</th>
         <th>BLD</th>
         <th>UBG</th>
+        <th>BIL</th>
+        <th>PRO</th>
+        <th>NIT</th>
+        <th>KET</th>
+        <th>GLU</th>
+        <th>PH</th>
+        <th>SG</th>
+        <th>LEU</th>
     </tr>
     @foreach (var device in Model)
     {
@@ -26,6 +34,14 @@
             <td>@device.ID</td>
             <td>@device.BLD</td>
             <td>@device.UBG</td>
+            <td>@device.BIL</td>
+            <td>@device.PRO</td>
+            <td>@device.NIT</td>
+            <td>@device.KET</td>
+            <td>@device.GLU</td>
+            <td>@device.PH</td>
+            <td>@device.SG</td>
+            <td>@device.LEU</td>
         </tr>
     }
 </table>
